# bybit_trading_bot

./: Cargo.toml  readme.md
src/: bybit_client.rs  gui.rs  main.rs
src/api/: bybit.rs  bybit_ws.rs  mod.rs
