[package]
name = "bybit_trading_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
